# AsteroidsGameExample

./: .gitignore  README.md
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: game_lib_jni_wrapper.cpp  glwrapper.h
app/src/main/cpp/game/: application.cpp  application.h  application_context.cpp  application_context.h
app/src/main/cpp/game/collision/: collision_handler.cpp  collision_handler.h
app/src/main/cpp/game/common/: common.cpp  common.h
app/src/main/cpp/game/controller/: controller_handler.cpp  controller_handler.h  touch_event.cpp  touch_event.h
app/src/main/cpp/game/model/: model_handler.cpp  model_handler.h  model_traits.cpp  model_traits.h
app/src/main/cpp/game/model/objects/: asteroid.cpp  asteroid.h  object.cpp  object.h  projectile.cpp  projectile.h  ship.cpp  ship.h
app/src/main/cpp/game/view/: view_handler.cpp  view_handler.h
app/src/main/java/ru/kytin/zeptolab/asteroids/: GameLibJNIWrapper.java  MainActivity.java  RendererWrapper.java
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
